# gnutls

./: .gitignore  CMakeLists.txt  README.md  build.py  conanfile.py  msvc-zlib-libname.patch
cmake/: conanos.cmake  config.cmake  config.h.cmakein  runtest.cmake
cmake/msvc/: config.h
cmake/msvc/patches/lib/algorithms/: protocols.c
cmake/msvc/patches/tests/: dtls1-2-mtu-check.c  utils.c
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
